<resources>
    <string name="app_name">Medicine Time</string>
    <string name="title_medicine_name">Medicine Name</string>
    <string name="hint_enter_med_name">Enter Medicine</string>
    <string name="medicine_days">Medicine Days</string>
    <string name="title_treatment_deadline">Treatment deadline</string>
    <string name="title_continuous_use">Continuous use</string>
    <string name="title_reminder">Reminder</string>
    <string name="new_medicine">NEW MEDICINE</string>
    <string name="every_day">Every day</string>
    <string name="no_medicine_added">No Medicine Added</string>
    <string name="loading_tasks_error">Error while loading medicineAlarms</string>
    <string name="successfully_saved_me_message">Medicine Added Successfully</string>
    <string name="successfully_deleted_message">Medicine deleted Successfully</string>
    <string name="reminder_message">It\'s Time to take your medicine</string>
    <string name="ignored">IGNORED</string>
    <string name="taken">TAKEN</string>
    <string name="all">ALL</string>
    <string name="menu_filter">Filter</string>
    <string name="all_label">All Medicines</string>
    <string name="ignore_label">Medicines Ignored</string>
    <string name="taken_label">Medicine Taken</string>
    <string name="no_history">No History Found</string>
    <string name="no_taken_med_history">You have not taken any medicine</string>
    <string name="no_ignored_history">Well Done</string>
    <string name="menu_stats">Monthly Report</string>
    <string name="title">Patient Info </string>
    <string name="patientName">Full Name</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="conditions">I have read, understood and accepted registration rules</string>
    // PROFILE STRINGS
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in" />
    <string name="join_us" />
    <string name="join">Join</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="joinus">JoinUs</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm_your_email">Confirm Your Email</string>
    <string name="please_log_in" />
    <string name="username" />
    <string name="register">Register</string>
    <string name="the_code_is_wrong_try_again" />
    <string name="enter_the_code_sent_to_your_email" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="app_name2">ModernLogin</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>

    <string name="home_text"></string>
    <string name="profile_text"></string>
    <string name="doctors_text"></string>
    <string name="logout_text"></string>


</resources>
