<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bk_color"
    tools:context=".Home.PatientInfoActivity">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/title"
        style="@style/viewParent2.headerText.NoMode"
        android:layout_width="272dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/nameImageView"
        style="@style/profileDetailsImage"
        android:layout_width="58dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_info" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="383dp"
        android:layout_height="494dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="152dp"
        app:cardBackgroundColor="@color/whiteTextColor"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                style="@style/parent"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="96dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/name"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.184"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/textInputEmail"
                style="@style/parent"
                android:layout_marginTop="2dp">

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="83dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="12dp"
                    android:text="Gender"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.118"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="205dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.118"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="80dp"
                        android:layout_height="33dp"
                        android:text="Male"
                        android:textColor="@color/profileEditTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="100dp"
                        android:layout_height="33dp"
                        android:layout_marginLeft="18dp"
                        android:text="Female"
                        android:textColor="@color/profileEditTextColor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.655"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </RadioGroup>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputMobile"
                style="@style/parent"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/weight"
                    android:layout_width="164dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="260dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/weight"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.149"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputWeight"
                style="@style/parent"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/height"
                    android:layout_width="157dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="260dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/height"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.919"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAge"
                style="@style/parent"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/age"
                    android:layout_width="175dp"
                    android:layout_height="52dp"
                    android:layout_marginTop="344dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/age"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.156"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPhone"
                style="@style/parent"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/Phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="428dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.194"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputAddress"
                style="@style/parent"
                android:layout_marginTop="2dp">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="500dp"
                    android:backgroundTint="@color/white"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.194"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/textInputUpload"
                style="@style/parent"
                android:layout_marginTop="2dp">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="38dp"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.107"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.967"
                    app:srcCompat="@drawable/paperclip" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:layout_marginTop="11dp"
                    android:layout_marginEnd="148dp"
                    android:text="Upload Your Profile Picture"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/imageButton"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/conditions"
        style="@style/viewParent2.headerText.NoMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="600dp"
        android:buttonTint="@color/white"
        android:text="@string/conditions"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/submit_info_form"
        style="@style/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="652dp"
        android:backgroundTint="@color/white"
        android:text="SUBMIT"
        android:textColor="@color/register_bk_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>